--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
     <span>VS Code</span>
   </div>
   <div class="tool-item">
-    <img src="SQLite2.png" alt="SQLite" />
-    <span>SQLite</span>
+    <img src="MySQL.png" alt="MySQL" />
+    <span>MySQL</span>
   </div>
   <div class="tool-item">
     <img src="power-bi.png" alt="Power BI" />
