--- a/home.html
+++ b/home.html
@@ -23,7 +23,7 @@
         <a href="https://wa.me/27789813484" target="_blank" class="btn whatsapp-btn">
           <i class="fab fa-whatsapp"></i> Whatsapp Me
         </a>
-        <a href="YANGA JILAJI'S CV(2).pdf" download class="btn download-btn">
+        <a href="YANGA JILAJI'S CV.pdf" download class="btn download-btn">
           <i class="fas fa-download"></i> Download My Resume
         </a>
       </div>
