--- a/projects.html
+++ b/projects.html
@@ -16,60 +16,76 @@
   </div>
 
   <section class="landing projects-page">
-    <h1>My Projects</h1>
+  <h1>My Projects</h1>
 
-    <div class="projects-grid">
-      <!-- Project 1 -->
-      <div class="project-card">
-        <img src="tutorfinders.png" alt="tutorfinders" />
-        <h3>Tutor Finder System</h3>
-        <p>A web application that connects students with tutors for academic support. 
-          Students can log in, browse available modules, and view profiles of tutors
-           specializing in each subject. The system displays tutor feedback and ratings 
-           from previous students, helping learners make informed decisions before booking 
-           sessions. Built with HTML, CSS, and JavaScript, the platform streamlines the process
-            of finding and booking tutors tailored to students’ specific needs</p>
-        <div class="project-links">
-          <a href="https://github.com/Amanda-Satu/TutorFinderSystem" target="_blank" class="btn github-btn">
-            <i class="fab fa-github"></i> GitHub
-          </a>
-        </div>
-      </div>
+  <div class="projects-grid">
 
-      <!-- Project 2 -->
-      <div class="project-card">
-        <img src="museum.png" alt="MuseumManagementSystem" />
-        <h3>Museum Management System</h3>
-        <p>A backend system developed using Java Spring Boot to efficiently manage museum operations. 
-          It tracks exhibitions, monitors visitor attendance, records ticket sales, and manages
-           detailed information about artifacts on display. This system streamlines administrative
-            tasks and provides valuable insights into visitor engagement and exhibit popularity.</p>
-        <div class="project-links">
-          <a href="https://github.com/222582731/museumManagementSystems" target="_blank" class="btn github-btn">
-            <i class="fab fa-github"></i> GitHub
-          </a>
-        </div>
-      </div>
+    <!-- Project 1 -->
+    <div class="project-card">
+      <img src="tutorFinderimg.png" alt="Tutor Finder System" />
+      <h3>Tutor Finder System</h3>
+      <p>
+        A full-stack web application designed to connect students with suitable tutors for academic support.
+        The platform enables secure authentication, tutor searching, and direct communication between students and tutors.
+        Students can browse tutor profiles, search by subject, and leave ratings and feedback.
+        Built using Java Spring Boot, RESTful APIs, MySQL, and a responsive frontend with HTML, CSS, and JavaScript.
+      </p>
 
-      <!-- Project 3 -->
-      <div class="project-card">
-        <img src="sqlnanny.png" alt="Project 3 Screenshot" />
-        <h3>ItumelengsNannyAtYourService</h3>
-        <p>A comprehensive database system designed to manage babysitting sessions efficiently.
-           It tracks parents, children, nannies, drivers, and payments while linking all related 
-           data to babysitting sessions. The system supports detailed record-keeping including 
-           session schedules, payment management with constraints, and reporting features like 
-           session summaries and revenue calculations. Built using SQL with triggers to enforce
-            business rules and views to simplify data retrieval, this project demonstrates effective
-             data organization and integrity for a childcare service</p>
-        <div class="project-links">
-          <a href="https://github.com/222582731/Itumeleng-sNanny" target="_blank" class="btn github-btn">
-            <i class="fab fa-github"></i> GitHub
-          </a>
-        </div>
+      <div class="project-links">
+        <a href="https://github.com/222582731/TutorFinderSystemPROJECT3" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Frontend
+        </a>
+        <a href="https://github.com/222582731/TutorFinderSystemBackend" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Backend
+        </a>
       </div>
     </div>
-  </section>
+
+    <!-- Project 2 -->
+    <div class="project-card">
+      <img src="SMS Image.png" alt="School Management System" />
+      <h3>School Management System</h3>
+      <p>
+        A full-stack web application designed to streamline academic management and enhance communication between students and teachers.
+        The system supports secure login and role-based access, allowing students to track attendance, view grades, download coursework,
+        and communicate with teachers. Teachers can upload coursework, manage attendance and grades, and send messages.
+        Built using Java Spring Boot, RESTful APIs, MySQL, and a responsive frontend with HTML, CSS, and JavaScript.
+      </p>
+
+      <div class="project-links">
+        <a href="https://github.com/222582731/SchoolManagementSystemFrontend" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Frontend
+        </a>
+        <a href="https://github.com/222582731/SchoolManagementSystem" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Backend
+        </a>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project-card">
+      <img src="homepage tyres & rims.png" alt="Tymelesstyre Ecommerce" />
+      <h3>Tymelesstyre E-Commerce</h3>
+      <p>
+        A full-stack e-commerce platform for selling car tyres and rims online. Customers can browse products,
+        add items to their cart, and place orders securely. The system includes JWT-based authentication and
+        role-based access control. An admin dashboard allows administrators to add, update, and remove products
+        while managing inventory. Built with Java Spring Boot, Spring Security, REST APIs, and a Vue.js frontend.
+      </p>
+
+      <div class="project-links">
+        <a href="https://github.com/222582731/TymelesstyreFrontend" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Frontend
+        </a>
+        <a href="https://github.com/222582731/TymelessTyre" target="_blank" class="btn github-btn">
+          <i class="fab fa-github"></i> Backend
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
    <footer>
     <p>&copy; <span id="year"></span> Yanga Jilaji. All rights reserved.</p>
