--- a/blog.html
+++ b/blog.html
@@ -32,7 +32,7 @@
 <body>
 
   <div class="top-right-nav">
-    <a href="home.html" class="nav-btn all-btn">Home</a>
+    <a href="index.html" class="nav-btn all-btn">Home</a>
     <a href="about.html" class="nav-btn all-btn">About Me</a>
     <a href="projects.html" class="nav-btn all-btn">Projects</a>
     <a href="contact.html" class="nav-btn all-btn active">Contact</a>
