--- a/certificate.html
+++ b/certificate.html
@@ -9,7 +9,7 @@
 
 
   <div class="top-right-nav">
-    <a href="home.html" class="nav-btn all-btn">Home</a>
+    <a href="index.html" class="nav-btn all-btn">Home</a>
     <a href="about.html" class="nav-btn all-btn">About Me</a>
     <a href="projects.html" class="nav-btn all-btn">Projects</a>
     <a href="contact.html" class="nav-btn all-btn">Contact Me</a>
