--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
 <body>
 
   <div class="top-right-nav">
-    <a href="home.html" class="nav-btn all-btn">Home</a>
+    <a href="index.html" class="nav-btn all-btn">Home</a>
     <a href="about.html" class="nav-btn all-btn">About Me</a>
     <a href="contact.html" class="nav-btn all-btn">Contact Me</a>
     <a href="certificate.html" class="nav-btn all-btn">Certificates</a>
